vast-sensu-client: Added new graphite attribite

--- a/cookbooks/vast-sensu-client/templates/default/client.json.erb
+++ b/cookbooks/vast-sensu-client/templates/default/client.json.erb
@@ -4,6 +4,10 @@
         "address": "<%= node.ipaddress %>",
         "subscriptions": <%= node.roles %>,
 
+        "graphite": {
+            "name": "<%= node.fqdn.gsub('.', '_') %>"
+        },
+
         "disk": {
             "wspace": 80,
             "cspace": 90,
